[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name = 'mvlearning'
version = '1.0.0'
description = 'Multi-view Learning framework'
requires-python = '>=3.8'
readme = { file = 'README.md', content-type = 'text/markdown' }
dynamic = ['dependencies']

[tool.setuptools.dynamic]
dependencies = { file = ['requirements.txt'] }

[tool.setuptools.packages.find]
where = ['.']
include = ['mvlearning']
